:construction: finish details components & logic/ creation of watchlist component

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -82,6 +82,11 @@
     z-index: 3;
   }
 
+  &__total {
+    margin-right: 5px;
+    font-weight: bold;
+  }
+
   &__item {
     display: flex;
     flex-direction: row;
