--- a/src/pages/Details/Details.scss
+++ b/src/pages/Details/Details.scss
@@ -292,7 +292,7 @@
 
 
     &__selected-title {
-      font-size: 14rem;
+      font-size: 12rem;
     }
 
     &__filter {
@@ -342,10 +342,7 @@
       margin-top: 5px;
     }
 
-    &__background {
-      filter: blur(5px);
-      -webkit-filter: blur(5px)
-    }
+ 
 
     &__overview {
 
@@ -429,7 +426,7 @@
       }
     }
 
-
+ 
 
     &__filter {
       top: 5%;
@@ -483,10 +480,7 @@
       margin-top: 5px;
     }
 
-    &__background {
-      filter: blur(5px);
-      -webkit-filter: blur(5px)
-    }
+
 
     &__overview {
       width: 100%;
@@ -579,13 +573,18 @@
       justify-content: center;
       margin-left: 0px;
     }
+    &__selected-title {
+      font-size: 10rem;
+    }
   }
 
 
 
   @media only screen and (min-width: 280px) and (max-width: 480px) {
 
-
+    &__selected-title {
+      font-size: 5rem;
+    }
     &__details-container {
       position: absolute;
       bottom: 40%;
@@ -595,8 +594,6 @@
     }
 
     &__details {
-
-
       margin: 0 auto;
       padding: 10px;
       text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.2);
@@ -628,8 +625,8 @@
     }
 
     &__background {
-      filter: blur(5px);
-      -webkit-filter: blur(5px)
+      filter: blur(3px);
+      -webkit-filter: blur(3px)
     }
 
     &__overview {
@@ -650,39 +647,7 @@
 
     }
 
-    &__selected {
-      width: 60px;
-
-
-
-      @keyframes bounce2 {
-
-        0%,
-        20%,
-        50%,
-        80%,
-        100% {
-          transform: translateY(0);
-        }
-
-        40% {
-          transform: translateY(-10px);
-        }
-
-        60% {
-          transform: translateY(-10px);
-        }
-      }
-    }
-
-    &__movie-item {
-      cursor: pointer;
-      transition: transform 0.3s ease;
-
-      &:hover {
-        transform: scale(1.1);
-      }
-    }
+ 
 
     &__vote-details {
       width: 100%;
