--- a/src/pages/Watchlist/Watchlist.scss
+++ b/src/pages/Watchlist/Watchlist.scss
@@ -1,5 +1,5 @@
 .watchlist {
-  background-color: #d85b53;
+  background-color: black;
   width: 100%;
 
   &__empty {
@@ -12,32 +12,32 @@
 
   &__button-title {
     padding: 20px;
-    background-color: rgb(5, 4, 4, 0.1);
+    border-bottom: 1px solid rgb(216, 91, 83, 0.3);
     display: flex;
     flex-direction: row;
     width: 600px;
     justify-content: space-between;
     align-items: center;
-    margin: 100px 0px;
-    border-radius: 15px;
+    margin: 150px 0px 100px 0px;
+    width: 100%;
   }
 
   &__icon {
-    width: 30px;
+    width: 25px;
     height: auto;
     transition: transform 0.3s ease;
     cursor: pointer;
     padding: 20px;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.5);
     }
   }
 
   &__container {
     margin: 0px 150px;
     padding: 0;
-    min-height: 100vh;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -130,7 +130,7 @@
     }
 
     &__name {
-        font-size: 9px;
+      font-size: 9px;
 
     }
 
