--- a/src/components/Slider/Arrow.scss
+++ b/src/components/Slider/Arrow.scss
@@ -7,12 +7,18 @@
   align-items: center;
   margin: 0px 10px;
 
+
   &__img {
-    width: 60px;
+    width: 50px;
     height: auto;
-
-
+    transition: transform 0.3s ease; 
+  
+    &:hover {
+      transform: scale(1.4);
+    }
   }
+  
+
   @media only screen and (min-width: 481px) and (max-width: 767px) {
     padding: 0;
     margin: 0px 5px;
