--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Rubik&display=swap");
+
 .slider {
   &__slides {
     display: flex;
@@ -10,24 +12,42 @@
     padding: 0;
     list-style-type: none;
 
-    &>* {
+    & > * {
       margin-right: 20px;
     }
 
-    &>*:last-child {
+    & > *:last-child {
       margin-right: 0;
     }
   }
 
+  &__list--grid {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(7, minmax(0, 1fr)); 
+    padding: 0;
+  }
+
+  &__toggle-button {
+    margin-top: 10px;
+    background-color: #3498db;
+    color: #fff;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #2980b9;
+    }
+  }
+
   @media only screen and (min-width: 280px) and (max-width: 480px) {
-
-
     &__list {
-      &>* {
+      & > * {
         margin-right: 7px;
       }
     }
   }
-
-
 }
