--- a/src/pages/UpcomingMovie/UpcomingMovie.scss
+++ b/src/pages/UpcomingMovie/UpcomingMovie.scss
@@ -3,31 +3,59 @@
 .upcoming {
   position: relative;
   font-family: "Rubik", sans-serif;
-  height: 90vh;
+  height: 95vh;
   overflow: hidden;
-  border-radius: 15px 15px 0 0;
 
-  &__details-container {
+  &__gen-container {
+    display: flex;
+    flex-direction: row;
+
+  }
+
+  &__background {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+
+  }
+
+  &__f-d-container {
+    width: 50%;
     position: absolute;
     bottom: 0;
     left: 0;
-    margin: 20px 20px 220px 350px;
-    padding: 20px;
-    border-radius: 15px;
+    height: 100%;
     z-index: 2;
-
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background: linear-gradient(to right,
-        rgb(0, 0, 0, 0.1) 40%,
-        rgb(0, 0, 0, 0.05) 60%,
+        rgb(0, 0, 0, 0.6) 50%,
+        rgb(0, 0, 0, 0.5) 75%,
+        rgb(0, 0, 0, 0.4) 80%,
         transparent 100%);
   }
 
+  &__f-d-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 150px;
+  }
+
+  &__filter {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+  }
+
   &__details {
-
-    margin: 0 auto;
-    padding: 20px;
-
     color: white;
     display: flex;
     flex-direction: column;
@@ -39,47 +67,37 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    width: 100%;
   }
 
   &__slider-container {
+    width: 50%;
+    height: 100%;
     position: absolute;
-    bottom: 5%;
     right: 0;
-    z-index: 2;
-    margin-right: 150px;
-    margin-top: 0;
+    bottom: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 3;
+   
+
   }
+
+
 
   &__button-container {
     margin-top: 20px;
   }
 
-  &__header {
-    z-index: 5;
-  }
-
-
-  &__background {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-position: center;
-  }
-
   &__title {
-    font-size: 20px;
+    font-size: 30px;
     text-align: start;
-    margin: 0;
+    margin: 10px 0px;
   }
 
   &__overview {
-    width: 600px;
-    font-size: 17px;
+    font-size: 20px;
+    line-height: 30px;
   }
 
   &__genres {
@@ -88,6 +106,7 @@
   }
 
   &__genre-item {
+    font-size: 15px;
     margin-right: 5px;
   }
 
@@ -106,27 +125,8 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    width: 110px;
-    animation: bounce2 5s ease infinite;
 
-    @keyframes bounce2 {
 
-      0%,
-      20%,
-      50%,
-      80%,
-      100% {
-        transform: translateY(0);
-      }
-
-      40% {
-        transform: translateY(-30px);
-      }
-
-      60% {
-        transform: translateY(-15px);
-      }
-    }
   }
 
   &__movie-item {
@@ -145,7 +145,7 @@
     display: flex;
     align-items: center;
     text-align: start;
-    padding: 10px 0px;
+    padding: 5px 0px;
   }
 
   &__count {
@@ -157,33 +157,12 @@
     padding: 5px 0px;
   }
 
-  &__icon-container {
-    position: absolute;
-    bottom: 10%;
-    margin-left: 150px;
-    z-index: 3;
-    width: 200px;
-    display: flex;
-    align-items: center;
-  }
+
 
   &__icon {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    padding: 10px;
-    border-radius: 50%;
-
-    &:hover {
-      background-color: rgb(216, 91, 83, 0.5);
-    }
-
-    &--detail {
-      animation: none !important;
-      width: 20px;
-      height: auto;
-      margin-right: 5px;
-    }
+    width: 20px;
+    height: 20px;
+    padding: 5px;
   }
 
   &__title-overlay {
@@ -200,21 +179,6 @@
   &__selected-title {
     font-size: 14rem;
   }
-
-  &__filter {
-    position: absolute;
-    top: 40%;
-    z-index: 3;
-    margin-left: 150px;
-  }
-
-
-
-
-
-
-
-
 
   @media only screen and (min-width: 280px) and (max-width: 480px) {
 
