--- a/src/components/Filter/FilterGenre.scss
+++ b/src/components/Filter/FilterGenre.scss
@@ -38,7 +38,47 @@
     color: black;
 
   }
+  @media only screen and (min-width: 713px) and (max-width: 1024px) {
 
-  &__option-text {}
+    &__icon {
+      width: 20px;
+
+    }
+    &__select {
+      padding: 10px 15px;
+      margin: 15px 0px;
+      border-radius: 14px;
+      cursor: pointer;
+      color: white;
+      width: 110px;
+      font-size: 10px;
+
+      &:focus {
+        outline: none;
+        border-color: rgba(216, 91, 83, 0.5);
+      }
+    }
+  }
+  @media only screen and (min-width: 1025px) and (max-width: 1400px) {
+
+    &__icon {
+      width: 25px;
+
+    }
+    &__select {
+      padding: 10px 15px;
+      margin: 25px 0px;
+      border-radius: 14px;
+      cursor: pointer;
+      color: white;
+      width: 130px;
+      font-size: 15px;
+
+      &:focus {
+        outline: none;
+        border-color: rgba(216, 91, 83, 0.5);
+      }
+    }
+  }
 
 }
