--- a/src/components/Slider/Arrow.scss
+++ b/src/components/Slider/Arrow.scss
@@ -19,6 +19,17 @@
   }
   
 
+
+
+  @media only screen and (min-width: 280px) and (max-width: 480px) {
+    padding: 0;
+    margin: 0px 5px;
+
+    &__img {
+      width: 30px;
+      height: auto;
+    }
+  }
   @media only screen and (min-width: 481px) and (max-width: 767px) {
     padding: 0;
     margin: 0px 5px;
@@ -30,19 +41,17 @@
 
     }
   }
-
-  @media only screen and (min-width: 280px) and (max-width: 480px) {
-    padding: 0;
-    margin: 0px 5px;
-
+  @media only screen and (min-width: 1025px) and (max-width: 1400px) {
     &__img {
       width: 30px;
       height: auto;
-
-
     }
   }
 
-
-
+  @media only screen and (min-width: 1400px) and (max-width: 1700px) {
+    &__img {
+      width: 30px;
+      height: auto;
+    }
+  }
 }
