--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,10 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Rubik&display=swap");
 
 .slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+
   &__slides {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+
   }
 
   &__list {
@@ -12,11 +18,11 @@
     padding: 0;
     list-style-type: none;
 
-    & > * {
+    &>* {
       margin-right: 20px;
     }
 
-    & > *:last-child {
+    &>*:last-child {
       margin-right: 0;
     }
   }
@@ -24,30 +30,49 @@
   &__list--grid {
     display: grid;
     gap: 10px;
-    grid-template-columns: repeat(7, minmax(0, 1fr)); 
+    grid-template-columns: repeat(7, minmax(0, 1fr));
     padding: 0;
+    list-style-type: none;
   }
 
-  &__toggle-button {
-    margin-top: 10px;
-    background-color: #3498db;
-    color: #fff;
-    padding: 8px 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
 
-    &:hover {
-      background-color: #2980b9;
-    }
-  }
 
   @media only screen and (min-width: 280px) and (max-width: 480px) {
     &__list {
-      & > * {
+      &>* {
         margin-right: 7px;
       }
     }
+
+
   }
+
+  @media only screen and (min-width: 713px) and (max-width: 1024px) {
+    &__list {
+      &>* {
+        margin-right: 10px;
+      }
+    }
+
+    &__list--grid {
+      grid-template-columns: repeat(10, minmax(0, 1fr));
+      gap: 5px;
+    }
+
+
+  }
+
+  @media only screen and (min-width: 1025px) and (max-width: 1400px) {
+    &__list--grid {
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+    }
+  }
+
+  @media only screen and (min-width: 1400px) and (max-width: 1700px) {
+    &__list--grid {
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+
+    }
+  }
+
 }
