--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -12,7 +12,6 @@
   height: 48px;
   justify-content: center;
   letter-spacing: -0.8px;
-  line-height: 24px;
   min-width: 20px;
   outline: 0;
   padding: 5px 10px;
@@ -26,13 +25,12 @@
 
   &:hover,
   &:focus {
-
     color: #fff;
   }
 
   &--remove {
     color: #fff;
-    background-color: rgba(216, 91, 83, 0.7) ;
+    background-color: rgba(216, 91, 83, 0.7);
     font-size: 15px;
     width: 200px;
     height: auto;
@@ -46,7 +44,7 @@
 
     &:hover {
       color: white;
-      background-color: rgba(216, 91, 83, 0.9) ;
+      background-color: rgba(216, 91, 83, 0.9);
       box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
     }
 
@@ -88,7 +86,7 @@
     width: 170px;
     height: 50px;
     font-size: 15px;
-    background-color: rgba(216, 91, 83, 0.9) ;
+    background-color: rgba(216, 91, 83, 0.9);
     border: 0;
     color: #fff;
 
@@ -96,7 +94,7 @@
 
     &:focus {
       width: 175px;
-      background-color: rgba(216, 91, 83, 0.7) ;
+      background-color: rgba(216, 91, 83, 0.7);
     }
 
     &:hover {
@@ -195,7 +193,7 @@
 
       &:focus {
         width: 115px;
-        background-color: rgb(51, 152, 219, 0.5)
+        background-color: rgba(216, 91, 83, 0.7);
       }
     }
 
@@ -252,7 +250,7 @@
 
       &:focus {
         width: 145px;
-        background-color: rgb(51, 152, 219, 0.5)
+        background-color: rgba(216, 91, 83, 0.7);
       }
     }
 
@@ -321,6 +319,27 @@
       width: 150px;
       height: auto;
       padding: 5px 5px;
+    }
+
+
+    &--view {
+
+      width: 125px;
+      height: 35px;
+      font-size: 10px;
+
+      color: #fff;
+      margin-right: 20px;
+
+      &:focus {
+        width: 130px;
+        background-color: rgba(216, 91, 83, 0.7);
+      }
+    }
+
+    &__icon {
+      width: 20px;
+
     }
   }
 }
