--- a/src/pages/Watchlist/Watchlist.scss
+++ b/src/pages/Watchlist/Watchlist.scss
@@ -1,6 +1,5 @@
 .watchlist {
   background-color: black;
-  width: 100%;
 
   &__empty {
     margin-top: 50px;
@@ -37,7 +36,6 @@
   &__container {
     margin: 0px 150px;
     padding: 0;
-    min-height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -97,7 +95,7 @@
     font-family: "Aboreto", sans-serif;
   }
 
-  @media only screen and (min-width: 1081px) and (max-width: 1680px) {
+  @media only screen and (min-width: 1060px) and (max-width: 1680px) {
     &__poster {
       width: 150px;
     }
@@ -120,6 +118,7 @@
   }
 
   @media only screen and (min-width: 481px) and (max-width: 1080px) {
+
     &__poster {
       width: 120px;
       margin-bottom: 10px;
@@ -139,7 +138,7 @@
     }
 
     &__list-items {
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(5, 1fr);
       gap: 30px;
 
     }
@@ -151,10 +150,11 @@
     &__button-title {
       padding: 20px;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      margin: 50px 0px;
+      margin-top: 150px;
+      margin-bottom: 50px;
       width: 400px;
     }
 
