--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,10 @@
 .footer {
     background-color: rgb(0, 0, 0);
     font-family: "Aboreto", sans-serif;
-
+    position: fixed;  
+    z-index: 3;
+    bottom: 0;
+    width: 100%;
     &__wrapper {
         margin: 0px 150px;
     }
