--- a/src/components/Slider/Arrow.scss
+++ b/src/components/Slider/Arrow.scss
@@ -11,13 +11,13 @@
   &__img {
     width: 50px;
     height: auto;
-    transition: transform 0.3s ease; 
-  
+    transition: transform 0.3s ease;
+
     &:hover {
       transform: scale(1.4);
     }
   }
-  
+
 
 
 
@@ -28,19 +28,24 @@
     &__img {
       width: 30px;
       height: auto;
+      &:hover {
+        transform: scale(1);
+      }
     }
   }
+
   @media only screen and (min-width: 481px) and (max-width: 767px) {
     padding: 0;
     margin: 0px 5px;
 
     &__img {
-      width: 40px;
+      width: 30px;
       height: auto;
 
 
     }
   }
+
   @media only screen and (min-width: 1025px) and (max-width: 1400px) {
     &__img {
       width: 30px;
