--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -47,19 +47,37 @@
 
   }
 
-  @media only screen and (min-width: 713px) and (max-width: 1024px) {
+  @media screen and (min-width: 500px) and (max-width: 712px) {
+    margin: 0px 75px;
+    &__slides {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      
+  
+    }
     &__list {
       &>* {
-        margin-right: 10px;
+        margin-right: 5px;
       }
     }
 
-    &__list--grid {
-      grid-template-columns: repeat(10, minmax(0, 1fr));
-      gap: 5px;
+    &__button-container {
+      display: none;
+    }
+  }
+
+  @media only screen and (min-width: 713px) and (max-width: 1024px) {
+    &__list {
+      &>* {
+        margin-right: 20px;
+      }
     }
 
-
+    &__button-container {
+      display: none;
+    }
   }
 
   @media only screen and (min-width: 1025px) and (max-width: 1400px) {
