--- a/src/pages/UpcomingMovie/UpcomingMovie.scss
+++ b/src/pages/UpcomingMovie/UpcomingMovie.scss
@@ -2,15 +2,15 @@
 
 .upcoming {
   font-family: "Rubik", sans-serif;
+
   &__gen-container {
     width: 100%;
     height: 100%;
     position: absolute;
     z-index: 2;
     display: flex;
-
-
   }
+
   &__background {
     position: absolute;
     z-index: 0;
@@ -32,7 +32,7 @@
     background: linear-gradient(to right,
         rgb(0, 0, 0, 0.6) 50%,
         rgb(0, 0, 0, 0.5) 75%,
-        rgb(0, 0, 0, 0.4) 80%,
+        rgb(0, 0, 0, 0.4) 90%,
         transparent 100%);
   }
 
@@ -112,7 +112,10 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
       rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
       rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    border: 2px solid rgb(255, 255, 255);
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    transform: scale(1.1);
+
 
   }
 
@@ -320,7 +323,105 @@
   }
 
 
-  @media screen and (min-width: 481px) and (max-width: 712px) {}
+  @media screen and (min-width: 500px) and (max-width: 712px) {
+
+
+    &__gen-container {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      z-index: 1;
+      display: flex;
+      flex-direction: column-reverse;
+      background-color: black;
+    }
+
+    &__title-overlay {
+      display: none;
+    }
+
+    &__background-responsive {
+      width: 100%;
+      position: absolute;
+      z-index: -1;
+      filter: blur(4px);
+    }
+
+
+
+    &__f-d-container {
+      display: flex;
+      justify-content: flex-start;
+      width: 100%;
+      height: 50%;
+      background: linear-gradient(to bottom,
+          rgb(0, 0, 0, 0.6) 50%,
+          rgb(0, 0, 0, 0.5) 75%,
+          rgb(0, 0, 0, 0.4) 80%,
+          transparent 100%);
+
+    }
+
+    &__f-d-box {
+
+      margin: 0px 50px;
+    }
+
+    &__slider-container {
+      width: 100%;
+      height: 25%;
+      margin-bottom: 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__title {
+      font-size: 16px;
+
+    }
+
+    &__overview {
+
+      font-size: 13px;
+      line-height: 20px;
+      text-align: justify;
+    }
+
+    &__img {
+      width: 120px;
+
+    }
+
+    &__vote-details {
+      display: flex;
+      flex-direction: row;
+
+    }
+
+
+
+    &__details-divers {
+      width: 100%;
+      font-size: 10px;
+
+
+
+    }
+
+    &__icon {
+      width: 20px;
+      height: 20px;
+      padding: 5px;
+    }
+
+
+
+    &__selected-title {
+      font-size: 4rem;
+    }
+
+  }
 
 
   @media only screen and (min-width: 713px) and (max-width: 1024px) {
@@ -337,6 +438,7 @@
 
     &__f-d-container {
       width: 100%;
+      height: 65%;
       background: linear-gradient(to bottom,
           rgb(0, 0, 0, 0.6) 50%,
           rgb(0, 0, 0, 0.5) 75%,
@@ -359,7 +461,7 @@
     &__slider-container {
       width: 100%;
       height: auto;
-      margin-bottom: 100px;
+      margin-bottom: 50px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -379,8 +481,9 @@
       font-size: 15px;
       line-height: 25px;
     }
+
     &__img {
-      width: 60px;
+      width: 100px;
       height: auto;
       border-radius: 10px;
     }
@@ -445,7 +548,7 @@
     }
 
     &__selected-title {
-      font-size: 10rem;
+      font-size: 8rem;
     }
 
 
