--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -113,7 +113,7 @@
     align-items: center;
   }
 
-  @media only screen and (min-width: 740px) and (max-width: 1060px) {
+  @media only screen and (min-width: 713px) and (max-width: 1060px) {
 
 
     &__logo-container {
@@ -248,12 +248,12 @@
 
 
 
-  @media only screen and (min-width: 280px) and (max-width: 490px) {
+  @media only screen and (min-width: 280px) and (max-width: 499px) {
 
-    margin: 0px 5px;
+    
 
     &__logo-container {
-      margin-left: 0px;
+      margin-left: 20px;
     }
 
     &__logo {
@@ -293,8 +293,8 @@
     &__link {
       display: flex;
       align-items: center;
-      padding: 0px 10px;
-      font-size: 11px;
+      padding: 0px 7px;
+      font-size: 10px;
       text-decoration: none;
       font-family: "Kanit", sans-serif;
 
@@ -304,7 +304,7 @@
     }
 
     &__watchlist-container {
-      margin: 0px;
+      margin-right:  20px;
 
     }
 
