--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -17,6 +17,7 @@
     display: flex;
     padding: 0;
     list-style-type: none;
+    transition: transform 4s ease;
 
     &>* {
       margin-right: 20px;
@@ -35,28 +36,43 @@
     list-style-type: none;
   }
 
-
-
-  @media only screen and (min-width: 280px) and (max-width: 480px) {
-    &__list {
-      &>* {
-        margin-right: 7px;
-      }
-    }
-
-
+  &__button-container {
+    margin-bottom: 50px;
   }
 
-  @media screen and (min-width: 500px) and (max-width: 712px) {
-    margin: 0px 75px;
+  @media only screen and (min-width: 280px) and (max-width: 499px) {
+    margin: 0px 50px;
     &__slides {
       display: flex;
       justify-content: space-between;
       align-items: center;
       width: 100%;
       
-  
     }
+
+    &__list {
+      &>* {
+        margin-right: 7px;
+      }
+    }
+
+    &__button-container {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: 500px) and (max-width: 712px) {
+    margin: 0px 75px;
+
+    &__slides {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+
+
+    }
+
     &__list {
       &>* {
         margin-right: 5px;
