--- a/src/pages/UpcomingMovie/UpcomingMovie.scss
+++ b/src/pages/UpcomingMovie/UpcomingMovie.scss
@@ -175,151 +175,102 @@
   }
 
 
-  @media only screen and (min-width: 280px) and (max-width: 480px) {
+  @media only screen and (min-width: 280px) and (max-width: 499px) {
 
 
-    &__details-container {
+    &__gen-container {
+      width: 100%;
+      height: 100%;
       position: absolute;
-      bottom: 40%;
-      left: 0;
-      margin: 0px 20px;
-      padding: 0px;
-    }
-
-    &__details {
-
-
-      margin: 0 auto;
-      padding: 10px;
-      text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.2);
-    }
-
-    &__vote-details {
+      z-index: 1;
       display: flex;
-      justify-content: space-evenly;
-      margin-top: 0px;
-      font-size: 10px;
+      flex-direction: column-reverse;
+      background-color: black;
+    }
+
+    &__title-overlay {
+      display: none;
+    }
+
+    &__background-responsive {
+      width: 100%;
+      position: absolute;
+      z-index: -1;
+      filter: blur(4px);
+    }
+
+
+
+    &__f-d-container {
+      display: flex;
+      justify-content: flex-start;
+      width: 100%;
+      height: 70%;
+      background: linear-gradient(to bottom,
+          rgb(0, 0, 0, 0.6) 50%,
+          rgb(0, 0, 0, 0.5) 75%,
+          rgb(0, 0, 0, 0.4) 80%,
+          transparent 100%);
+
+    }
+
+    &__f-d-box {
+
+      margin: 0px 20px;
     }
 
     &__slider-container {
-
-      bottom: 10%;
+      width: 100%;
+      height: 35%;
+      margin-bottom: 0px;
       display: flex;
       justify-content: center;
-      width: 100%;
-      margin-right: 0px;
-      margin-top: 0;
-    }
-
-    &__button-container {
-      margin-top: 5px;
+      align-items: flex-end;
     }
 
     &__title {
-      font-size: 12px;
-    }
-
-    &__background {
-      filter: blur(5px);
-      -webkit-filter: blur(5px)
+      font-size: 14px;
+      margin: 0;
     }
 
     &__overview {
-      width: 100%;
-      font-size: 11px;
+
+      font-size: 13px;
+      line-height: 15px;
+      text-align: justify;
     }
-
-    &__genre-item {
-      font-size: 10px;
-
-    }
-
-
 
     &__img {
-      width: 45px;
-      height: auto;
+      width: 100px;
 
-    }
-
-    &__selected {
-      width: 60px;
-
-
-
-      @keyframes bounce2 {
-
-        0%,
-        20%,
-        50%,
-        80%,
-        100% {
-          transform: translateY(0);
-        }
-
-        40% {
-          transform: translateY(-10px);
-        }
-
-        60% {
-          transform: translateY(-10px);
-        }
-      }
-    }
-
-    &__movie-item {
-      cursor: pointer;
-      transition: transform 0.3s ease;
-
-      &:hover {
-        transform: scale(1.1);
-      }
     }
 
     &__vote-details {
-      width: 100%;
-    }
-
-    &__vote {
-      width: 100%;
-      font-size: 10px;
-      padding: 5px 0px;
-    }
-
-    &__count {
-      font-size: 10px;
-    }
-
-    &__icon-container {
-      bottom: 5%;
-      margin-left: 0px;
-      width: 100%;
       display: flex;
-      justify-content: center;
+      flex-direction: row;
+
+    }
+
+
+
+    &__details-divers {
+      width: 100%;
+      font-size: 9px;
+
+
+
     }
 
     &__icon {
       width: 20px;
-      height: auto;
-
-      &--detail {
-        animation: none !important;
-        width: 15px;
-        height: auto;
-
-      }
+      height: 20px;
+      padding: 5px;
     }
 
 
-
-    &__filter {
-      top: 5%;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      margin-left: 0px;
+    &__selected-title {
+      font-size: 4rem;
     }
-
   }
 
 
@@ -353,7 +304,7 @@
       display: flex;
       justify-content: flex-start;
       width: 100%;
-      height: 50%;
+      height: 70%;
       background: linear-gradient(to bottom,
           rgb(0, 0, 0, 0.6) 50%,
           rgb(0, 0, 0, 0.5) 75%,
@@ -369,11 +320,11 @@
 
     &__slider-container {
       width: 100%;
-      height: 25%;
+      height: 45%;
       margin-bottom: 0px;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items:flex-end;
     }
 
     &__title {
