--- a/src/pages/Watchlist/Watchlist.scss
+++ b/src/pages/Watchlist/Watchlist.scss
@@ -1,5 +1,6 @@
 .watchlist {
   background-color: black;
+  flex-grow: 1;
 
   &__empty {
     margin-top: 50px;
@@ -34,12 +35,18 @@
   }
 
   &__container {
-    margin: 0px 150px;
+
     padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
+    flex-grow: 1;
+  }
+
+  &__list-container {
+    width: 100%;
+    margin: 0px 150px;
   }
 
   &__title {
@@ -57,12 +64,17 @@
     align-items: center;
   }
 
+  &__trial {
+    width: 100%;
+    padding: 100px 0px;
+  }
+
   &__list-items {
     list-style: none;
     padding: 0;
     margin: 20px 0px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     gap: 30px;
     justify-content: center;
     align-items: center;
@@ -100,8 +112,11 @@
       width: 150px;
     }
 
+
     &__list-items {
-      gap: 10px;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 30px;
+
     }
 
     &__icon {
@@ -138,7 +153,7 @@
     }
 
     &__list-items {
-      grid-template-columns: repeat(5, 1fr);
+      grid-template-columns: repeat(4, 1fr);
       gap: 30px;
 
     }
