--- a/src/components/Filter/FilterGenre.scss
+++ b/src/components/Filter/FilterGenre.scss
@@ -10,12 +10,12 @@
     background: transparent;
     border: 1px solid rgb(216, 91, 83, 0.5);
     padding: 10px 15px;
-    margin: 50px 0px;
+    margin: 25px 0px;
     border-radius: 14px;
     cursor: pointer;
     color: white;
     width: 170px;
-    font-size: 20px;
+    font-size: 15px;
 
     &:focus {
       outline: none;
@@ -31,6 +31,7 @@
 
   &__option {
     color: black;
+    
 
   }
 
@@ -46,8 +47,8 @@
     }
 
     &__select {
-      padding: 10px 15px;
-      margin: 15px 0px;
+      padding: 5px 10px;  
+      margin: 10px 0;     
       border-radius: 14px;
       cursor: pointer;
       color: white;
@@ -58,6 +59,11 @@
         outline: none;
         border-color: rgba(216, 91, 83, 0.5);
       }
+    }
+
+    &__option {
+      padding: 5px 10px !important;  // Adjusted padding
+      margin: 5px 0 !important;      // Adjusted margin
     }
   }
 
