--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,7 +12,9 @@
   z-index: 3;
   text-shadow: 1px 1px 2px rgb(0, 0, 0, 0.9);
   width: 100%;
-
+  &.scrolled {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
   &__item {
     margin-left: 5px;
   }
@@ -124,10 +126,7 @@
       width: 30px;
       height: auto;
 
-      &--watch {
-        width: 20px;
-        height: auto;
-      }
+   
     }
 
 
@@ -161,6 +160,12 @@
 
       &--logo {
         padding: 0px 0px;
+      }
+
+      &.underline {
+        padding: 5px 0px;
+        border-bottom: 1px solid #d85b53;
+
       }
     }
 
@@ -250,7 +255,7 @@
 
   @media only screen and (min-width: 280px) and (max-width: 499px) {
 
-    
+
 
     &__logo-container {
       margin-left: 20px;
@@ -293,7 +298,7 @@
     &__link {
       display: flex;
       align-items: center;
-      padding: 0px 7px;
+      padding: 0px 10px;
       font-size: 10px;
       text-decoration: none;
       font-family: "Kanit", sans-serif;
@@ -301,10 +306,19 @@
       &--logo {
         padding: 0px 0px;
       }
+
+      &--watchlist {
+        padding: 0px 0px;
+      }
+      &.underline {
+        padding: 5px 0px;
+        border-bottom: 1px solid #d85b53;
+
+      }
     }
 
     &__watchlist-container {
-      margin-right:  20px;
+      margin-right: 20px;
 
     }
 
