--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -31,11 +31,11 @@
   &--remove {
     color: #fff;
     background-color: rgba(216, 91, 83, 0.7);
-    font-size: 15px;
-    width: 200px;
+    font-size: 13px;
+    width: 180px;
     height: auto;
-    padding: 10px 5px;
-    border-radius: 0px 15px 15px 0px;
+    padding: 10px 0px;
+   
 
     &:focus {
       width: 210px;
@@ -84,12 +84,11 @@
   &--view {
     background-color: #d85b53;
     width: 170px;
-    height: 50px;
-    font-size: 15px;
+    height: 40px;
+    font-size: 12px;
     background-color: rgba(216, 91, 83, 0.9);
     border: 0;
     color: #fff;
-
     margin-right: 40px;
 
     &:focus {
@@ -146,8 +145,9 @@
     &--remove {
       width: 110px;
       height: auto;
-      padding: 0px 5px;
+      padding: 5px 5px;
       font-size: 10px;
+      border-radius: 5px;
     }
 
     &--get-started {
@@ -164,6 +164,7 @@
       height: 30px;
       padding: 8px 13px;
       border-radius: 50px;
+      
 
       &:focus {
         width: 65px;
@@ -185,11 +186,10 @@
     &--view {
       background-color: #d85b53;
       width: 110px;
-      height: 30px;
+      height: 20px;
       font-size: 8px;
-
       color: #fff;
-      margin-right: 5px;
+      margin-right: 0px;
 
       &:focus {
         width: 115px;
@@ -228,6 +228,33 @@
         fill: black;
       }
     }
+
+    &--view {
+      background-color: #d85b53;
+      width: 120px;
+      height: 30px;
+      font-size: 10px;
+      background-color: rgba(216, 91, 83, 0.9);
+      border: 0;
+      color: #fff;
+      margin-right: 15px;
+  
+      &:focus {
+        width: 175px;
+        background-color: rgba(216, 91, 83, 0.7);
+      }
+  
+      &:hover {
+        color: white;
+  
+        box-shadow: 6px 0px 0px rgb(255, 255, 255, 0.2);
+      }
+  
+      &:active {
+        color: black;
+        fill: black;
+      }
+    }
   }
 
 
@@ -235,7 +262,7 @@
     &--remove {
       width: 120px;
       height: auto;
-      padding: 2px 2px;
+      padding: 7px 2px;
       font-size: 10px;
     }
 
