--- a/src/pages/TV/Shows.scss
+++ b/src/pages/TV/Shows.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200&family=Rubik&display=swap");
 
-.show{
+.show {
   font-family: "Rubik", sans-serif;
 
   &__gen-container {
@@ -78,7 +78,7 @@
   }
 
   &__button-container {
-    margin-top: 20px;
+    margin-top: 10px;
   }
 
   &__title {
@@ -89,7 +89,7 @@
 
   &__overview {
     font-size: 20px;
-    line-height: 30px;
+    line-height: 25px;
   }
 
   &__genres {
@@ -103,7 +103,7 @@
   }
 
   &__img {
-    width: 90px;
+    width: 70px;
     height: auto;
     border-radius: 10px;
   }
@@ -162,16 +162,16 @@
   &__title-overlay {
     width: 100%;
     position: absolute;
-    top: 50%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 0.4);
     z-index: 1;
   }
 
   &__selected-title {
-    font-size: 13rem;
+    font-size: 5rem;
   }
 
 
@@ -187,10 +187,10 @@
       flex-direction: column-reverse;
       background-color: black;
     }
-
     &__title-overlay {
       display: none;
-    }
+     }
+ 
 
     &__background-responsive {
       width: 100%;
@@ -203,25 +203,29 @@
 
     &__f-d-container {
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       width: 100%;
-      height: 70%;
+      height: 100%;
       background: linear-gradient(to bottom,
           rgb(0, 0, 0, 0.6) 50%,
           rgb(0, 0, 0, 0.5) 75%,
           rgb(0, 0, 0, 0.4) 80%,
           transparent 100%);
-
+      margin-bottom: 50px;
     }
 
     &__f-d-box {
-
       margin: 0px 20px;
+    }
+
+    &__button-container {
+      width: 100%;
+      margin-top: 10px;
+
     }
 
     &__slider-container {
       width: 100%;
-      height: 35%;
       margin-bottom: 0px;
       display: flex;
       justify-content: center;
@@ -229,19 +233,19 @@
     }
 
     &__title {
-      font-size: 14px;
-      margin: 0;
+      font-size: 15px;
+      margin: 10px 0px 0px 0px;
     }
 
     &__overview {
 
-      font-size: 13px;
-      line-height: 15px;
+      font-size: 11px;
+      line-height: 13px;
       text-align: justify;
     }
 
     &__img {
-      width: 100px;
+      width: 80px;
 
     }
 
@@ -269,7 +273,7 @@
 
 
     &__selected-title {
-      font-size: 4rem;
+      font-size: 1rem;
     }
   }
 
@@ -287,16 +291,23 @@
       background-color: black;
     }
 
-    &__title-overlay {
-      display: none;
-    }
-
     &__background-responsive {
       width: 100%;
       position: absolute;
       z-index: -1;
       filter: blur(4px);
     }
+
+
+
+    &__title-overlay {
+
+      display: none;
+
+    }
+
+
+
 
 
 
@@ -324,7 +335,7 @@
       margin-bottom: 0px;
       display: flex;
       justify-content: center;
-      align-items:flex-end;
+      align-items: flex-end;
     }
 
 
@@ -341,7 +352,8 @@
     }
 
     &__img {
-      width: 120px;
+      width: 110px;
+      margin: 5px;
 
     }
 
@@ -368,9 +380,14 @@
     }
 
 
+    &__selected {
+      border: 2px solid white;
+
+
+    }
 
     &__selected-title {
-      font-size: 4rem;
+      font-size: 3rem;
     }
 
   }
@@ -500,7 +517,7 @@
     }
 
     &__selected-title {
-      font-size: 8rem;
+      font-size: 6rem;
     }
 
 
@@ -513,6 +530,7 @@
 
     &__slider-container {
       margin-right: 0px;
+
     }
 
     &__details {
