--- a/src/pages/Movies/PopMovieList.scss
+++ b/src/pages/Movies/PopMovieList.scss
@@ -212,7 +212,7 @@
           rgb(0, 0, 0, 0.5) 75%,
           rgb(0, 0, 0, 0.4) 80%,
           transparent 100%);
-      margin-bottom: 50px;
+      margin-top: 20px;
     }
 
     &__f-d-box {
@@ -220,6 +220,8 @@
     }
 
     &__button-container {
+      display: flex;
+      flex-direction: column;
       width: 100%;
       margin-top: 10px;
 
@@ -601,13 +603,12 @@
   }
 
   @media only screen and (min-width: 820px) and (max-width: 912px) and (min-height: 1180px) and (max-height: 1368px) {
-
-    &__f-d-container {
+ 
+  &__f-d-container {
       width: 100%;
       height: 50%;
       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.5) 75%, rgba(0, 0, 0, 0.4) 80%, transparent 100%);
-    }
-
+  }
     &__slider-container {
       margin-right: 0px;
 
