:hammer: fix button size view

--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -230,7 +230,7 @@
       margin-top: 10px;
   
       &:focus {
-        width: 175px;
+        width: auto;
         background-color: rgba(216, 91, 83, 0.7);
       }
   
